--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mawar Abadi - For You</title>
+    <title>Mawar Abadi - Buat Icha</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +25,8 @@
             </div>
             <div class="fall-petal"></div>
         </div>
-        <h1 class="text-for-you">For You</h1>
+        <h1 class="text-for-you">Rayakan Dirimu</h1>
     </div>
 </body>
 </html>
+
