--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             </div>
             <div class="fall-petal"></div>
         </div>
-        <h1 class="text-for-you">Rayakan Dirimu</h1>
+        <h1 class="text-for-you">Merayakan Icha</h1>
     </div>
 </body>
 </html>
+
 
