--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mawar Abadi - Buat Icha</title>
+    <title>Mawar Abadi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="main-wrapper">
         <div class="glass">
             <div class="flower">
                 <div class="rose">
-                    <div class="petal leaf-1"></div>
-                    <div class="petal leaf-2"></div>
-                    <div class="petal leaf-3"></div>
-                    <div class="petal leaf-4"></div>
-                    <div class="petal leaf-5"></div>
-                    <div class="petal leaf-6"></div>
-                    <div class="rose-core"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="petal"></div>
+                    <div class="rose-center"></div>
                 </div>
                 <div class="stick"></div>
                 <div class="leaf leaf-left"></div>
@@ -25,9 +24,8 @@
             </div>
             <div class="fall-petal"></div>
         </div>
-        <h1 class="text-for-you">Merayakan Icha</h1>
+        
+        <h1 class="text-for-you">FOR YOU, CHA</h1>
     </div>
 </body>
 </html>
-
-
