--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <div class="fall-petal"></div>
         </div>
         
-        <h1 class="text-for-you">FOR YOU, CHA</h1>
+        <h1 class="text-for-you">MERAYAKAN ICHA</h1>
     </div>
 </body>
 </html>
+
